@@ -246,6 +246,12 @@ name|_keep
 init|=
 literal|null
 decl_stmt|;
+specifier|private
+name|String
+name|_failureProperty
+init|=
+literal|null
+decl_stmt|;
 specifier|public
 name|String
 name|getDate
@@ -437,6 +443,28 @@ name|_type
 operator|=
 name|type
 expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setFailurePropery
+parameter_list|(
+name|String
+name|failureProperty
+parameter_list|)
+block|{
+name|_failureProperty
+operator|=
+name|failureProperty
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getFailureProperty
+parameter_list|()
+block|{
+return|return
+name|_failureProperty
+return|;
 block|}
 specifier|public
 name|void
@@ -727,12 +755,33 @@ expr_stmt|;
 block|}
 if|if
 condition|(
-name|isHaltonfailure
-argument_list|()
-operator|&&
 name|report
 operator|.
 name|hasError
+argument_list|()
+condition|)
+block|{
+if|if
+condition|(
+name|_failureProperty
+operator|!=
+literal|null
+condition|)
+block|{
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+name|_failureProperty
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|isHaltonfailure
 argument_list|()
 condition|)
 block|{
@@ -743,6 +792,7 @@ argument_list|(
 literal|"resolve failed - see output for details"
 argument_list|)
 throw|;
+block|}
 block|}
 name|setResolved
 argument_list|(
